<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="#80000000">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:paddingTop="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_exit_dialog">

        <LinearLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_option"
            android:backgroundTint="#2E2E2E"/>

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/_5sdp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_close"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/librefranklin_bold"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:includeFontPadding="false"
            android:text="@string/exit_app"
            android:textAllCaps="false"
            android:textColor="#0B0E21"
            android:textSize="@dimen/_22ssp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_trans"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:importantForAccessibility="no"
            android:src="@drawable/img_exit_app"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/librefranklin_medium"
            android:gravity="center"
            android:singleLine="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="#757783"
            android:paddingHorizontal="@dimen/_16ssp"
            android:textSize="@dimen/_14ssp"
            android:text="@string/are_you_sure_you_want_to_quit_this_app" />


        <TextView
            android:id="@+id/tvRate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/librefranklin_bold"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:background="@drawable/btn_orange_b"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <include
            android:id="@+id/llVachaliMoneyView"
            layout="@layout/money_custom_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:fontFamily="@font/librefranklin_bold"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:background="@drawable/btn_gray_b"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />


    </LinearLayout>


</FrameLayout>