<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_gray"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/yellow_bg_tr_br_365"
                android:fontFamily="@font/author_semibold"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_7sdp"
                android:singleLine="true"
                android:text="@string/ad_attribution"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/_5sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_close_btn" />

             <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/btn_black_stock"
                android:includeFontPadding="false"
                android:scaleType="fitXY"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:visibility="gone" />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llTop"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/default_gray"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gifView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_pre_money_gif_2" />

            <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeTextView
                android:id="@+id/tvHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:ellipsize="end"
                android:fontFamily="@font/author_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/mgl_play_game"
                android:textColor="@color/qreka_text_color"
                android:textSize="@dimen/_19ssp" />

            <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeTextView
                android:id="@+id/tital1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:ellipsize="end"
                android:fontFamily="@font/author_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/play_and_win_coins_daily"
                android:textColor="@color/qreka_text_color"
                android:textSize="@dimen/_16ssp" />

            <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeTextView
                android:id="@+id/tital2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/author_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/play_and_win_coins_daily"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_175sdp">



                    <ImageView
                        android:id="@+id/imgBanner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_extra_inters_banner1" />

                </RelativeLayout>

            </LinearLayout>


            <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeTextView
                android:id="@+id/tvBottomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:ellipsize="end"
                android:fontFamily="@font/author_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:singleLine="false"
                android:text="@string/play_car_racing_game_earn_upto_50_000_coins"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/_14ssp" />




            <com.qrcodegenerator.qrcodereader.barcodescanner.qrreader.scanqrcode.view.CodeButton
                android:id="@+id/btnPlayNow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/btn_blue_btn"
                android:fontFamily="@font/author_bold"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/play_now"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>