<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlAdvertiseMain"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_258sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/light_red_square"
        android:minHeight="@dimen/_50sdp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/light_yellow_square"
            android:fontFamily="@font/author_semibold"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/ad_attribution"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingRight="@dimen/_5sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifView"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_pre_money_gif_2"
                    android:visibility="visible" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_5sdp">


                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/author_bold"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@string/play_and_win_coins_daily"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:visibility="visible" />


                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:ellipsize="end"
                        android:fontFamily="@font/author_regular"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:text="@string/play_quiz_win_upto_50_000_coins"
                        android:textColor="@color/ads_desc_text_color"
                        android:textSize="@dimen/_11ssp"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/ic_pre_money_small_native4"
                    android:visibility="visible" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_5sdp">


                </LinearLayout>

                <TextView
                    android:id="@+id/ad_call_to_action"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/btn_blue_btn"
                    android:clickable="false"
                    android:enabled="false"
                    android:fontFamily="@font/author_bold"
                    android:gravity="center"
                    android:text="@string/play_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>